loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:10: error: '(' expected but identifier found.
          droite()
          ^Poucet1:12: error: illegal start of simple expression
}while(sortieTrouvee()==false)
^